@@ -38,7 +38,7 @@ else {
   $opts{TYPEMAPS} = [ Imager::ExtUtils->typemap ];
 
   # Imager required configure through use
-  my @Imager_req = ( Imager => "0.85" );
+  my @Imager_req = ( Imager => "0.86" );
   if ($MM_ver >= 6.46) {
     $opts{META_MERGE} =
       {
