@@ -1,5 +1,10 @@
 Imager release history.  Older releases can be found in Changes.old
 
+Imager 0.86 - 31 Oct 2011
+===========
+
+ - improve error reporting for W32 tests
+
 Imager 0.85_02 - 24 Oct 2011
 ==============
 
